--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,48 @@
+@media (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    width: 50%;
+  }
+}
+
+h1.title, h1.contact, h1.s, h1.s-en, h1.f, h1.f-en, h1.f-prive {
+  margin-left: 10px;
+  animation: slideDown 0.5s;
+  animation-fill-mode: both;
+  text-align: center;
+  position: absolute;
+}
 
 h1.title {
   font-weight: bold;
   font-size: 36px;
-  margin: 0;
-  top: 30%;
   left: 44%;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
-  text-align: center;
 }
 
 h1.contact {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 45%;
-  text-align: center;
 }
 
 h1.s {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 46%;
-  text-align: center;
 }
 
 h1.s-en {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 44%;
-  text-align: center;
 }
 
 h1.f {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 47%;
-  text-align: center;
 }
 
 h1.f-en {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 45%;
-  text-align: center;
 }
 
 h1.f-prive {
-  margin-left: 10px;
-  animation: slideDown 0.5s;
-  animation-fill-mode: both;
   left: 41%;
-  text-align: center;
 }
 
-h2 {
+h2, h3 {
   font-size: 24px;
   animation: slideDown 0.5s ease-out;
   animation-fill-mode: forwards;
@@ -67,8 +51,6 @@ h2 {
 
 h3 {
   font-size: 18px;
-  animation: slideDown 0.5s ease-out;
-  animation-fill-mode: forwards;
 }
 
 p, a {
@@ -113,7 +95,6 @@ button:focus {
     transform: translateY(-100%);
     opacity: 0;
   }
-
   to {
     transform: translateY(0%);
     opacity: 1;
@@ -211,6 +192,7 @@ footer {
   text-align: center;
   animation: slideDown 0.5s;
   animation-fill-mode: both;
+  position: relative;
 }
 
 .language-select {
@@ -265,8 +247,8 @@ html {
   height: 100%;
 }
 body {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
   background: linear-gradient(#30142b, #a12727);
 }
@@ -278,9 +260,9 @@ body {
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.5);
+  background: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
 }
 
@@ -306,15 +288,16 @@ body {
   outline: none;
   background: transparent;
 }
+
 .login-box .user-box label {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   padding: 10px 0;
   font-size: 16px;
   color: #fff;
   pointer-events: none;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .login-box .user-box input:focus ~ label,
@@ -334,9 +317,9 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   overflow: hidden;
-  transition: .5s;
+  transition: 0.5s;
   margin-top: 40px;
-  letter-spacing: 4px
+  letter-spacing: 4px;
 }
 
 .login-box a:hover {
@@ -367,7 +350,7 @@ body {
   0% {
     left: -100%;
   }
-  50%,100% {
+  50%, 100% {
     left: 100%;
   }
 }
@@ -379,14 +362,14 @@ body {
   height: 100%;
   background: linear-gradient(180deg, transparent, #f4bc03);
   animation: btn-anim2 1s linear infinite;
-  animation-delay: .25s
+  animation-delay: 0.25s;
 }
 
 @keyframes btn-anim2 {
   0% {
     top: -100%;
   }
-  50%,100% {
+  50%, 100% {
     top: 100%;
   }
 }
@@ -398,14 +381,14 @@ body {
   height: 2px;
   background: linear-gradient(270deg, transparent, #f4dc03);
   animation: btn-anim3 1s linear infinite;
-  animation-delay: .5s
+  animation-delay: 0.5s;
 }
 
 @keyframes btn-anim3 {
   0% {
     right: -100%;
   }
-  50%,100% {
+  50%, 100% {
     right: 100%;
   }
 }
@@ -417,14 +400,14 @@ body {
   height: 100%;
   background: linear-gradient(360deg, transparent, #f4b003);
   animation: btn-anim4 1s linear infinite;
-  animation-delay: .75s
+  animation-delay: 0.75s;
 }
 
 @keyframes btn-anim4 {
   0% {
     bottom: -100%;
   }
-  50%,100% {
+  50%, 100% {
     bottom: 100%;
   }
 }
