--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@
   }
 }
 
-h1.title, h1.contact, h1.s, h1.s-en, h1.f, h1.f-en, h1.f-prive {
+/* h1.title, h1.contact, h1.s, h1.s-en, h1.f, h1.f-en, h1.f-prive {
   margin-left: 10px;
   animation: slideDown 0.5s;
   animation-fill-mode: both;
   text-align: center;
   position: absolute;
-}
+} */
 
 h1.title {
   font-weight: bold;
