--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
 h1 {
   text-align: center;
   margin-top: 2%;
@@ -397,4 +398,5 @@ body {
   100% {
     bottom: 100%;
   }
+}
 }
